fixed test cases